# machine-learning-algorithms-in-cpp

./: CMakeLists.txt  README.md
principal_component_analysis/: pca.cpp  pca.h
